--- a/movie.html
+++ b/movie.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="movie.css">
-    <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
     <title>Flatdango</title>
 </head>
 
@@ -26,19 +25,21 @@
             </div>
             <!---THE MOVIE CARDS-->
             <div class="container">
-                <div class="card">
-                    <img src="" class="card-img-top" alt="">
+                <!---<div class="card">
+                    <img src="" class="poster" alt="">
                     <div class="card-body">
-                        <h5 class="card-title"></h5>
-                        <p class="card-text"></p>
-                        <a href="#" class="btn btn-primary"></a>
+                        <h5 class="title"></h5>
+                        <p class="description"></p>
+                        <p class="showtime"></p>
+                        <p class="tickets"></p>
+                        <a href="#" class="btn"></a>
                     </div>
-                </div>
+                </div>--->
             </div>
         </div>
     </div>
+    <script src="movie.js"></script>
 </body>
-
 </html>
 
 
