Adding functionality to the button

--- a/movie.html
+++ b/movie.html
@@ -12,7 +12,9 @@
 <body>
     <div class="wrapper">
         <div class="sidebar">
-            <h2>Flat<span>dango</span></h2>
+            <div class="logo">
+                <span class="flat">Flat</span><span class="dango">dango</span>
+              </div>
             <h3>Available Movies</h3>
             <ul>
                 <li><a href="#"></a></li>
@@ -21,7 +23,7 @@
         <div class="main_content">
             <div class="header">
                 <h2>Flat Iron Movie Theater</h2>
-                <h2>Hope you find the Movie you are looking for</h2>
+                <h3>Find your flick with Flatdango!</h3>
             </div>
             <!---THE MOVIE CARDS-->
             <div class="container">
