--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="movie.css">
+    <link rel="stylesheet" href="./index.css">
     <title>Flatdango</title>
 </head>
 
@@ -28,19 +28,20 @@
             <!---THE MOVIE CARDS-->
             <div class="container">
                 <!---<div class="card">
-                    <img src="" class="poster" alt="">
+                    <img src="https://www.thecocktaildb.com/images/media/drink/noxp7e1606769224.jpg" class="poster" alt="">
                     <div class="card-body">
-                        <h5 class="title"></h5>
-                        <p class="description"></p>
-                        <p class="showtime"></p>
+                        <h5 class="title">Gin Sour</h5>
+                        <p class="description">In a shaker half-filled with ice cubes, combine the gin, lemon juice, and sugar. Shake well. Strain into a sour glass and garnish with the orange slice and the cherry.
+                        </p>
+                        <p class="showtime">Gin, Lemon juice, Sugar, Orange and Maraschino cherry</p>
                         <p class="tickets"></p>
-                        <a href="#" class="btn"></a>
+                        <a href="#" class="btn">LOVE</a>
                     </div>
                 </div>--->
             </div>
         </div>
     </div>
-    <script src="movie.js"></script>
+    <script src="/index.js"></script>
 </body>
 </html>
 
